fix: button z-index

--- a/src/client/components/Button/index.less
+++ b/src/client/components/Button/index.less
@@ -35,11 +35,11 @@
 
   div {
     position: relative;
+    z-index: 25;
     margin: 5px 10px;
     padding: 5px 10px;
     display: table-cell;
     vertical-align: middle;
-    margin: auto;
   }
 }
 
